# HackEurope_2026

./: .gitignore  CLAUDE.md  README.md  docker-compose.yaml
backend/: .dockerignore  .env  .env.example  .gitignore  AUTH_README.md  Dockerfile  MIGRATIONS.md  README.md  SETUP.md  STRIPE_README.md  alembic.ini  package-lock.json  package.json  pyproject.toml  requirements.txt  seed.py
backend/alembic/: env.py
backend/alembic/versions/: bde05dbdad35_add_cloud_pricing_table.py
backend/app/: main.py
backend/app/core/: config.py  database.py  dependencies.py  security.py  stripe_client.py
backend/app/models/: __init__.py  client.py  cloud_pricing.py  invoice.py  item.py  market_data.py  override.py  payment.py  user.py  vendor.py
backend/app/pricing/: __init__.py  fetcher.py  normalizer.py
backend/app/repositories/: __init__.py  base.py  client.py  cloud_pricing.py  invoice.py  item.py  market_data.py  override.py  payment.py  user.py  vendor.py
backend/app/schemas/: __init__.py  auth.py  client.py  cloud_pricing.py  invoice.py  item.py  market_data.py  override.py  payment.py  vendor.py
backend/app/services/: __init__.py  auth.py  client.py  cloud_pricing.py  invoice.py  item.py  market_data.py  (+5 more)
backend/processing_layer/: README.md  constants.py  prompts.py  pyproject.toml
backend/tests/: conftest.py  test_approve.py  test_billing.py  test_clients.py  test_extraction_vendor_iban.py  test_health.py  test_invoices.py  test_items.py  test_market_data.py  test_normalizer.py  test_overrides.py  test_payments.py  test_pricing.py  test_stripe_service.py  test_vendors.py  test_webhooks.py
(+117 files in other folders)
