[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "asyncio>=4.0.0",
    "asyncpg>=0.31.0",
    "fastapi>=0.129.1",
    "greenlet>=3.3.2",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.2.1",
    "requests>=2.31.0",
    "sqlalchemy>=2.0.46",
    "uvicorn>=0.41.0",
    "google-genai>=1.0",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
testing = ["fiftyone", "huggingface_hub>=0.20.0", "jupyterlab", "Pillow", "pytest"]
